chore: run e2e test in parallel

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -9,6 +9,9 @@ on:
   schedule:
     - cron: "0 4,7,10 * * *"
   pull_request:
+    branches:
+      - main
+      - dev
     types:
       - assigned
       - opened
