--- a/packages/adaptivecards-tools-sdk/tsconfig.json
+++ b/packages/adaptivecards-tools-sdk/tsconfig.json
@@ -1,32 +1,37 @@
 {
   "compilerOptions": {
-    "module": "esnext",
+    "module": "ES2015",
     "outDir": "./lib",
+    "declarationDir": "./types",
     "target": "es5",
-    "lib": ["dom"],
-    "sourceMap": true,
-    "inlineSources": true,
-    "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "lib": [
+      "es5",
+      "dom",
+      "es2015.promise",
+      "es2015.symbol",
+      "es2015.iterable",
+      "es2015.collection",
+      "es2015.symbol.wellknown",
+      "es2015.core",
+      "es2017.object",
+      "es2017.string"
+    ],
     "jsx": "react",
     "declaration": true,
-    "declarationDir": "./types",
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
-    "declarationMap": true,
     "importHelpers": true,
+    "strict": true,
     "alwaysStrict": true,
     "noUnusedLocals": false, // TODO: temporarily disabled
     "noUnusedParameters": false, // TODO: temporarily disabled
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "noEmit": true,
-    "experimentalDecorators": true
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
   "include": ["./src"],
   "exclude": ["node_modules", "rollup.config.js", "lib"]
