feat: update template to use adaptivecards-tools sdk

--- a/templates/bot/ts/default/tsconfig.json
+++ b/templates/bot/ts/default/tsconfig.json
@@ -7,6 +7,8 @@
     "rootDir": "./",
     "sourceMap": true,
     "incremental": true,
-    "tsBuildInfoFile": "./lib/.tsbuildinfo"
+    "tsBuildInfoFile": "./lib/.tsbuildinfo",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   }
 }
