--- a/templates/bot/ts/default/package.json
+++ b/templates/bot/ts/default/package.json
@@ -16,8 +16,7 @@
     "url": "https://github.com"
   },
   "dependencies": {
-    "adaptive-expressions": "^4.14.1",
-    "adaptivecards-templating": "^2.1.0",
+    "@microsoft/adaptivecards-tools": "^0.1.2",
     "botbuilder": "~4.14.0",
     "botbuilder-dialogs": "~4.14.0",
     "isomorphic-fetch": "^3.0.0",
