--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -803,6 +803,11 @@
       {
         "title": "Teams Toolkit",
         "properties": {
+          "fx-extension.rollbackToTeamsToolkitV2": {
+            "type": "boolean",
+            "description": "Rollback to Teams Toolkit v2. Notice the setting will be obsolete and removed soon. (requires reload of VS Code)",
+            "default": false
+          },
           "fx-extension.validateNode": {
             "type": "boolean",
             "description": "Ensure Node.js is installed.",
