--- a/packages/fx-core/src/common/samples-config.json
+++ b/packages/fx-core/src/common/samples-config.json
@@ -21,6 +21,15 @@
             "configuration": "F5 ready"
         },
         {
+            "id": "graph-toolkit-contact-exporter",
+            "title": "Contact Exporter using Graph Toolkit",
+            "shortDescription": "Contact Exporter app of Microsoft Teams Tab app.",
+            "fullDescription": "Contact Exporter app can export your teams contact info to Excel files, and it is using Microsoft Graph Toolkit as UI component. This app only has a Tab frontend.",
+            "tags": ["Tab", "JS", "Ready to F5 Preview"],
+            "time": "5min to run",
+            "configuration": "F5 ready"
+        },
+        {
             "id": "todo-list-with-Azure-backend",
             "title": "Todo List with backend on Azure",
             "shortDescription": "Todo List app with Azure Function backend and Azure SQL database",
