--- a/packages/dotnet-sdk/src/TeamsFx.Test/Microsoft.TeamsFx.Test.csproj
+++ b/packages/dotnet-sdk/src/TeamsFx.Test/Microsoft.TeamsFx.Test.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
