fix: ut and ignore

--- a/packages/fx-core/.gitignore
+++ b/packages/fx-core/.gitignore
@@ -9,3 +9,4 @@ coverage
 templates/plugins/resource/bot/**/*.zip
 templates/plugins/resource/frontend/**/*.zip
 templates/plugins/resource/function/**/*.zip
+tests/**/TeamsSPFxApp.zip
