--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -781,9 +781,9 @@
       {
         "title": "Teams Toolkit",
         "properties": {
-          "fx-extension.rollbackToTeamsToolkitV2": {
+          "fx-extension.(Obsolete)WorkOnTeamsToolkitV2ProjectConfigurationFiles": {
             "type": "boolean",
-            "description": "Rollback to Teams Toolkit v2. Notice the setting will be obsolete and removed soon. (requires reload of VS Code)",
+            "description": "Temporarily work on Teams Toolkit V2 project configuration files. This setting is obsolete and will be removed soon. (Requires reload of VS Code)",
             "default": false
           },
           "fx-extension.validateNode": {
