--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -53,9 +53,9 @@
     "@azure/msal-node": "~1.1.0",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "axios": "^0.24.0",
-    "botbuilder": ">=4.15.0-rc0 <5.0.0",
-    "botbuilder-dialogs": ">=4.15.0-rc0 <5.0.0",
-    "botframework-schema": "^4.14.1",
+    "botbuilder": ">=4.15.0 <5.0.0",
+    "botbuilder-dialogs": ">=4.15.0 <5.0.0",
+    "botframework-schema": ">=4.15.0 <5.0.0",
     "jwt-decode": "^3.1.2",
     "tedious": "^14.0.0",
     "tslib": "^2.3.1",
@@ -88,6 +88,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^4.13.0",
     "adm-zip": "^0.5.9",
+    "botbuilder-core": ">=4.15.0 <5.0.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "concurrently": "^6.3.0",
