--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -51,15 +51,17 @@
   "dependencies": {
     "@azure/identity": "^2.0.1",
     "@azure/msal-node": "~1.1.0",
+    "@microsoft/microsoft-graph-client": "^3.0.1",
     "axios": "^0.24.0",
-    "botbuilder": ">=4.15.0-rc0 <5.0.0",
-    "botbuilder-dialogs": ">=4.15.0-rc0 <5.0.0",
+    "botbuilder": ">=4.15.0 <5.0.0",
+    "botbuilder-dialogs": ">=4.15.0 <5.0.0",
+    "botframework-schema": ">=4.15.0 <5.0.0",
     "jwt-decode": "^3.1.2",
+    "tedious": "^14.0.0",
     "tslib": "^2.3.1",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@microsoft/microsoft-graph-client": "^3.0.0",
     "@microsoft/teams-js": "^1.9.0"
   },
   "devDependencies": {
@@ -70,7 +72,6 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.13.68",
     "@microsoft/api-extractor": "^7.18.19",
-    "@microsoft/microsoft-graph-client": "^3.0.0",
     "@microsoft/teams-js": "^1.9.0",
     "@rollup/plugin-json": "^4.1.0",
     "@shared/eslint-config": "file:../eslint-config",
@@ -87,6 +88,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^4.13.0",
     "adm-zip": "^0.5.9",
+    "botbuilder-core": ">=4.15.0 <5.0.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "concurrently": "^6.3.0",
@@ -122,7 +124,6 @@
     "semver": "^7.3.5",
     "sinon": "^12.0.1",
     "source-map-loader": "^3.0.0",
-    "tedious": "^14.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
