--- a/.github/workflows/sdk-ci.yml
+++ b/.github/workflows/sdk-ci.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           echo TEMP="/tmp" >> $env:GITHUB_ENV
           echo TMP="/tmp" >> $env:GITHUB_ENV
+          echo TMPDIR="/tmp" >> $env:GITHUB_ENV
 
       - name: Remove package-lock(Windows)
         if: matrix.os == 'windows-latest'
