--- a/.github/workflows/sdk-ci.yml
+++ b/.github/workflows/sdk-ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest]
         node-version: [14]
 
     runs-on: ${{ matrix.os }}
@@ -38,13 +38,6 @@ jobs:
         run: |
           echo TEMP="D:\Temp" >> $env:GITHUB_ENV
           echo TMP="D:\Temp" >> $env:GITHUB_ENV
-
-      - name: MacOS temp dir fix
-        if: matrix.os == 'macos-latest'
-        run: |
-          echo TEMP="/tmp" >> $env:GITHUB_ENV
-          echo TMP="/tmp" >> $env:GITHUB_ENV
-          echo TMPDIR="/tmp" >> $env:GITHUB_ENV
 
       - name: Remove package-lock(Windows)
         if: matrix.os == 'windows-latest'
