--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -19,6 +19,7 @@
     "test:appstudio": "nyc mocha \"tests/plugins/resource/appstudio/**/*.test.ts\"",
     "test:spfx": "nyc mocha \"tests/plugins/resource/spfx/**/*.test.ts\"",
     "test:apim": "nyc mocha \"tests/plugins/resource/apim/**/*.test.ts\"",
+    "test:keyvault": "nyc mocha \"tests/plugins/resource/keyvault/**/*.test.ts\"",
     "test:unit": "nyc --no-clean mocha \"tests/**/*.test.ts\"",
     "test:solution": "nyc mocha \"tests/plugins/solution/*.test.ts\"",
     "test:core": "nyc mocha \"tests/core/*.test.ts\"",
