--- a/packages/fx-core/src/common/samples-config.json
+++ b/packages/fx-core/src/common/samples-config.json
@@ -45,7 +45,7 @@
             "fullDescription": "Todo List provides an easy way to manage to-do items in Teams Client. This app helps enabling task collaboration and management for your team. The frontend is a React app and the backend is hosted on Azure. You will need an Azure subscription to run the app.",
             "tags": ["React", "Azure function", "Azure SQL", "JS", "CI/CD"],
             "time": "30min to run",
-            "configuration": "Manual configurations required(User need to run script to create SQL DB schema)"
+            "configuration": "Manual configurations required"
         },
         {
             "id": "todo-list-SPFx",
@@ -54,7 +54,7 @@
             "fullDescription": "Todo List with SPFx is a Todo List for individuals to manage his/her personal to-do items. This app is hosted on Sharepoint. There is no requirements to deploy Azure resources.",
             "tags": ["SharePoint", "SPFx", "TS"],
             "time": "1hr to run",
-            "configuration": "Manual configurations required(Manual config work on SharePoint site)"
+            "configuration": "Manual configurations required"
         },
         {
             "id": "share-now",
@@ -72,7 +72,7 @@
             "fullDescription": "In-meeting app is a hello-world template which shows how to build an app in the context of a Teams meeting. This is a hello-world sample which does not provide any functional feature. This app contains a side panel and a Bot which only shows user profile and can only be added to a Teams meeting.",
             "tags": ["Meeting extension", "JS"],
             "time": "4hr to run",
-            "configuration": "Manual configurations required(All manual work, register app and so on..)"
+            "configuration": "Manual configurations required"
         },
         {
             "id": "faq-plus",
@@ -81,7 +81,7 @@
             "fullDescription": "FAQ Plus is a conversational Q&A bot providing an easy way to answer frequently asked questions by users. One can ask a question and the bot responds with information in the knowledge base. If the answer is not in the knowledge base, the bot submits the question to a pre-configured team of experts who help provide support.",
             "tags": ["Easy QnA", "Bot", "JS"],
             "time": "1hr to run",
-            "configuration": "Manual configurations required(Manually populate meta data to QnA service)"
+            "configuration": "Manual configurations required"
         },
         {
             "id": "todo-list-with-Azure-backend-M365",
@@ -89,8 +89,8 @@
             "shortDescription": "Todo List app that runs across Microsoft 365 including Teams, Outlook and Office",
             "fullDescription": "Todo List app helps to manage personal to do items and also runs across Microsoft 365, including Teams, Outlook and Office. The frontend is a React app and the backend is an Azure Function. You can optionally deploy and host the app in Azure.",
             "tags": ["React", "Azure function", "JS", "Outlook", "Office"],
-            "time": "5min to run",
-            "configuration": "Ready for local debug"
+            "time": "30min to run",
+            "configuration": "Manual configurations required"
         },
         {
             "id": "NPM-search-connector-M365",
@@ -98,8 +98,8 @@
             "shortDescription": "Search and Share an NPM Package in Teams and Outlook (Web)",
             "fullDescription": "NPM Search Connector is a Messaging Extension that runs across M365 including Teams and Outlook (Web). It allows you to perform a quick search for a NPM package and insert package details into conversations for easy sharing. The front end is built with Adaptive Cards and the backend is an Azure Bot Service.",
             "tags": ["Messaging extension", "JS", "Outlook"],
-            "time": "10min to run",
-            "configuration": "Manual configurations required(Manually configure Outlook in Bot Channel Registration)"
+            "time": "45min to run",
+            "configuration": "Manual configurations required"
         }
     ]
 }
