--- a/package.json
+++ b/package.json
@@ -26,9 +26,5 @@
   "bin": {
     "teamsfx": "./packages/cli/cli.js"
   },
-  "dependencies": {
-    "azure-kusto-data": "^2.2.3",
-    "azure-kusto-ingest": "^2.2.3",
-    "logmining": "^1.2.3"
-  }
+  "dependencies": {}
 }
