feat(api): update

--- a/packages/api/src/v3/projectSettingsAfterAddCapability.json
+++ b/packages/api/src/v3/projectSettingsAfterAddCapability.json
@@ -5,9 +5,10 @@
         "name": "TeamsFxSolutionPlugin",
         "version": "3.0.0",
         "hostType": "",
-        "capabilities": [],
+        "capabilities": ["Tab"],
         "azureResources": [],
         "modules":{
+          "tab": {}
         },
         "activeResourcePlugins": [
           "fx-resource-app-studio"
