Initial changes for MGT to be supported in TeamsFx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,11 @@
   "cSpell.words": [
     "kusto",
     "logmining"
-  ]
+  ],
+  "markdownlint.config": {
+    "MD028": false,
+    "MD025": {
+      "front_matter_title": ""
+    }
+  }
 }
