--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "@fluentui/react-northstar": "^0.54.0",
         "@microsoft/microsoft-graph-client": "^3.0.0",
+        "@microsoft/mgt-element": "2.3.1-preview.d7be81c",
+        "@microsoft/mgt-react": "2.3.1-preview.d7be81c",
         "@microsoft/teams-js": "^1.9.0",
         "@microsoft/teamsfx": "^0.3.0",
         "axios": "^0.21.1",
