--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -5,8 +5,9 @@
     "dependencies": {
         "@fluentui/react-northstar": "^0.54.0",
         "@microsoft/microsoft-graph-client": "^3.0.0",
-        "@microsoft/mgt-element": "2.3.1-preview.d7be81c",
-        "@microsoft/mgt-react": "2.3.1-preview.d7be81c",
+        "@microsoft/mgt-element": "2.3.2-next.teamsfx.58b042d",
+        "@microsoft/mgt-react": "2.3.2-next.teamsfx.58b042d",
+        "@microsoft/mgt-teamsfx-provider": "2.3.2-next.teamsfx.58b042d",
         "@microsoft/teams-js": "^1.9.0",
         "@microsoft/teamsfx": "^0.3.0",
         "axios": "^0.21.1",
