--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       cases:
-        description: "specific cases to be excuted."
+        description: 'specific cases to be excuted(JSON Array Sample: ["TestCreateTab", "AzureAppScaffold"])'
         required: false
   schedule:
     - cron: "0 4,7,10 * * *"
