--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -137,7 +137,7 @@ jobs:
       - name: run test
         working-directory: packages/cli
         run: |
-          file=`find tests/e2e -name $case".tests.ts"`
+          file=`find tests/e2e -name "${{ matrix.cases }}.tests.ts"`
           if [ ! -z "$file" ]; then
             npx mocha --reporter @mochajs/json-file-reporter $file
           fi
