--- a/packages/simpleauth/src/TeamsFxSimpleAuth/Microsoft.TeamsFx.SimpleAuth.csproj
+++ b/packages/simpleauth/src/TeamsFxSimpleAuth/Microsoft.TeamsFx.SimpleAuth.csproj
@@ -35,6 +35,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="3.1.7" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.37.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.14.4" />
   </ItemGroup>
 
