feat(collaboration): collaboration support spfx project, cli message update

--- a/packages/cli/.vscode/launch.json
+++ b/packages/cli/.vscode/launch.json
@@ -79,7 +79,8 @@
         "${workspaceFolder}/lib/**/*.js",
         "${workspaceFolder}/../fx-core/build/**/*.js",
         "${workspaceFolder}/../api/build/**/*.js"
-      ]
+      ],
+      "console": "integratedTerminal"
     },
     {
       "type": "pwa-node",
@@ -109,7 +110,8 @@
         "${workspaceFolder}/lib/**/*.js",
         "${workspaceFolder}/../fx-core/build/**/*.js",
         "${workspaceFolder}/../api/build/**/*.js"
-      ]
+      ],
+      "console": "integratedTerminal"
     }
   ]
 }
